objects/CommandCenter__Release__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a specific instance of the product and all of the related components that make up the specific instance.</description>
    <fields>
        <fullName>CommandCenter__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Deployment_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicate that whether approval is required for deployment from client or not.</description>
        <inlineHelpText>This field indicate that whether approval is required for deployment from client or not.</inlineHelpText>
        <label>Deployment Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Description__c</fullName>
        <description>Description about Release</description>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__On_Demand_Validation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicate that whether On-Demand deployment validation is required for deployment from client or not.</description>
        <inlineHelpText>This field indicate that whether On-Demand deployment validation is required for deployment from client or not.</inlineHelpText>
        <label>On-Demand Validation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of this release.</description>
        <inlineHelpText>Owner of this release.</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>OwnerReleases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Parent_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select a release to which this release is related to.</description>
        <inlineHelpText>Select an existing release to which the current release is related to.</inlineHelpText>
        <label>Parent Release</label>
        <referenceTo>CommandCenter__Release__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>ParentReleases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Prod_Validation_Complete__c</fullName>
        <label>Prod Validation Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Production_Deploy_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production Deploy Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Release_Actual_End_Date__c</fullName>
        <description>Actual date of end of release</description>
        <label>Release Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Release_Planned_End_Date__c</fullName>
        <description>Estimated date of end of release</description>
        <label>Release Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Release_Start_Date__c</fullName>
        <description>Start Date of release</description>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Release__c</fullName>
        <description>Release Number</description>
        <label>Release #</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Status_Update__c</fullName>
        <description>Release status update</description>
        <inlineHelpText>Release status update</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Status__c</fullName>
        <description>Displays a status as red, green or yellow ball</description>
        <inlineHelpText>Green: Milestone completion on target
Yellow: Milestone completion at risk
Red: Milestone completion planned to be missed or missed</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <default>true</default>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>CommandCenter__All</fullName>
        <columns>NAME</columns>
        <columns>CommandCenter__Parent_Release__c</columns>
        <columns>CommandCenter__Release_Start_Date__c</columns>
        <columns>CommandCenter__Release_Planned_End_Date__c</columns>
        <columns>CommandCenter__Owner__c</columns>
        <columns>CommandCenter__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CommandCenter__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CommandCenter__Release_Actual_End_Date_Validation</fullName>
        <active>false</active>
        <description>Actual end date should not be greater  than today&apos;s date</description>
        <errorConditionFormula>CommandCenter__Release_Actual_End_Date__c  &gt; Today()</errorConditionFormula>
        <errorDisplayField>CommandCenter__Release_Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual end date should not be greater  than today&apos;s date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CommandCenter__Releases_Date_Validation</fullName>
        <active>false</active>
        <description>Releases_Date_Validation</description>
        <errorConditionFormula>OR( CommandCenter__Release_Actual_End_Date__c  &lt;  CommandCenter__Release_Start_Date__c ,  CommandCenter__Release_Planned_End_Date__c  &lt;  CommandCenter__Release_Start_Date__c )</errorConditionFormula>
        <errorMessage>Release Start/End Date should be later than Release Start Date.</errorMessage>
    </validationRules>
</CustomObject>